kubernetes/applications/media/manifests/suwayomi-backup-server/suwayomi-backup-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suwayomi-backup-server-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suwayomi-backup-server
  template:
    metadata:
      labels:
        app: suwayomi-backup-server
    spec:
      # temporary: prefer to keep off overloaded oug node
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - talos-oug-a0q
      containers:
        - name: suwayomi-backup-server
          image: ghcr.io/suwayomi/suwayomi-server:v2.4.2422
          volumeMounts:
            - name: files
              mountPath: /home/suwayomi/.local/share/Tachidesk
          ports:
            - containerPort: 4567
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 64m
              memory: 768Mi
            limits:
              cpu: 1000m
              memory: 1536Mi
        - name: vpn
          image: qmcgaw/gluetun:v3.41.1
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          readinessProbe:
            exec:
              command:
                - /gluetun-entrypoint
                - healthcheck
            initialDelaySeconds: 15 # Gives the VPN 15s to handshake first
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3 # Allows 3 strikes before killing the pod
          livenessProbe:
            exec:
              command:
                - /gluetun-entrypoint
                - healthcheck
            initialDelaySeconds: 30 # Gives plenty of time for initial setup
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3 # Allows 3 strikes before killing the pod
          lifecycle:
            postStart:
              exec:
                command:
                  [
                    "/bin/sh",
                    "-c",
                    "(ip rule del table 51820; ip -6 rule del table 51820) || true",
                  ]
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: suwayomi-backup-server-files-pvc
